// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly handle opening/closing accordions: 2nd opened 1`] = `
<div
  className="create-project-import-bbs"
>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      collapse_all
    </ButtonLink>
  </div>
  <BoxedGroupAccordion
    className="open"
    key="project"
    onClick={[Function]}
    open={true}
    title={
      <h3>
        Project
      </h3>
    }
  >
    <div
      className="display-flex-wrap"
    >
      <Radio
        checked={false}
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo overflow-hidden"
        key="1"
        onCheck={[Function]}
        value="1"
      >
        <strong
          className="text-ellipsis"
        >
          Repo
        </strong>
      </Radio>
      <span
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo"
        key="2"
      >
        <CheckIcon
          className="spacer-right"
          fill="#00aa00"
          size={14}
        />
        <span>
          <div
            className="little-spacer-bottom"
          >
            <strong>
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": undefined,
                      "id": "bar",
                    },
                  }
                }
              >
                Bar
              </Link>
            </strong>
          </div>
          <em>
            onboarding.create_project.repository_imported
          </em>
        </span>
      </span>
    </div>
  </BoxedGroupAccordion>
  <BoxedGroupAccordion
    className="open"
    key="project2"
    onClick={[Function]}
    open={true}
    title={
      <h3>
        Project 2
      </h3>
    }
  >
    <div
      className="display-flex-wrap"
    >
      <Alert
        variant="warning"
      >
        onboarding.create_project.no_bbs_repos
      </Alert>
    </div>
  </BoxedGroupAccordion>
</div>
`;

exports[`should render correctly: default 1`] = `
<div
  className="create-project-import-bbs"
>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      expand_all
    </ButtonLink>
  </div>
  <BoxedGroupAccordion
    className="open"
    key="project"
    onClick={[Function]}
    open={true}
    title={
      <h3>
        Project
      </h3>
    }
  >
    <div
      className="display-flex-wrap"
    >
      <Radio
        checked={false}
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo overflow-hidden"
        key="1"
        onCheck={[Function]}
        value="1"
      >
        <strong
          className="text-ellipsis"
        >
          Repo
        </strong>
      </Radio>
      <span
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo"
        key="2"
      >
        <CheckIcon
          className="spacer-right"
          fill="#00aa00"
          size={14}
        />
        <span>
          <div
            className="little-spacer-bottom"
          >
            <strong>
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": undefined,
                      "id": "bar",
                    },
                  }
                }
              >
                Bar
              </Link>
            </strong>
          </div>
          <em>
            onboarding.create_project.repository_imported
          </em>
        </span>
      </span>
    </div>
  </BoxedGroupAccordion>
  <BoxedGroupAccordion
    className=""
    key="project2"
    onClick={[Function]}
    open={false}
    title={
      <h3>
        Project 2
      </h3>
    }
  />
</div>
`;

exports[`should render correctly: importing 1`] = `
<div
  className="create-project-import-bbs"
>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      expand_all
    </ButtonLink>
  </div>
  <BoxedGroupAccordion
    className="open"
    key="project"
    onClick={[Function]}
    open={true}
    title={
      <h3>
        Project
      </h3>
    }
  >
    <div
      className="display-flex-wrap"
    >
      <Radio
        checked={false}
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo overflow-hidden disabled text-muted link-no-underline"
        key="1"
        onCheck={[Function]}
        value="1"
      >
        <strong
          className="text-ellipsis"
        >
          Repo
        </strong>
      </Radio>
      <span
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo"
        key="2"
      >
        <CheckIcon
          className="spacer-right"
          fill="#00aa00"
          size={14}
        />
        <span>
          <div
            className="little-spacer-bottom"
          >
            <strong>
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": undefined,
                      "id": "bar",
                    },
                  }
                }
              >
                Bar
              </Link>
            </strong>
          </div>
          <em>
            onboarding.create_project.repository_imported
          </em>
        </span>
      </span>
    </div>
  </BoxedGroupAccordion>
  <BoxedGroupAccordion
    className=""
    key="project2"
    onClick={[Function]}
    open={false}
    title={
      <h3>
        Project 2
      </h3>
    }
  />
</div>
`;

exports[`should render correctly: no projects 1`] = `
<Alert
  variant="warning"
>
  onboarding.create_project.no_bbs_projects
</Alert>
`;

exports[`should render correctly: no repos 1`] = `
<div
  className="create-project-import-bbs"
>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      expand_all
    </ButtonLink>
  </div>
  <BoxedGroupAccordion
    className="open"
    key="project"
    onClick={[Function]}
    open={true}
    title={
      <h3>
        Project
      </h3>
    }
  >
    <div
      className="display-flex-wrap"
    >
      <Alert
        variant="warning"
      >
        onboarding.create_project.no_bbs_repos
      </Alert>
    </div>
  </BoxedGroupAccordion>
  <BoxedGroupAccordion
    className=""
    key="project2"
    onClick={[Function]}
    open={false}
    title={
      <h3>
        Project 2
      </h3>
    }
  />
</div>
`;

exports[`should render correctly: selected repo 1`] = `
<div
  className="create-project-import-bbs"
>
  <div
    className="overflow-hidden spacer-bottom"
  >
    <ButtonLink
      className="pull-right"
      onClick={[Function]}
    >
      expand_all
    </ButtonLink>
  </div>
  <BoxedGroupAccordion
    className="open"
    key="project"
    onClick={[Function]}
    open={true}
    title={
      <h3>
        Project
      </h3>
    }
  >
    <div
      className="display-flex-wrap"
    >
      <Radio
        checked={true}
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo overflow-hidden"
        key="1"
        onCheck={[Function]}
        value="1"
      >
        <strong
          className="text-ellipsis"
        >
          Repo
        </strong>
      </Radio>
      <span
        className="display-inline-flex-start spacer-right spacer-bottom create-project-import-bbs-repo"
        key="2"
      >
        <CheckIcon
          className="spacer-right"
          fill="#00aa00"
          size={14}
        />
        <span>
          <div
            className="little-spacer-bottom"
          >
            <strong>
              <Link
                onlyActiveOnIndex={false}
                style={Object {}}
                to={
                  Object {
                    "pathname": "/dashboard",
                    "query": Object {
                      "branch": undefined,
                      "id": "bar",
                    },
                  }
                }
              >
                Bar
              </Link>
            </strong>
          </div>
          <em>
            onboarding.create_project.repository_imported
          </em>
        </span>
      </span>
    </div>
  </BoxedGroupAccordion>
  <BoxedGroupAccordion
    className=""
    key="project2"
    onClick={[Function]}
    open={false}
    title={
      <h3>
        Project 2
      </h3>
    }
  />
</div>
`;
